# marty-credentials

./: .cliff.toml  .dockerignore  .gitignore  .gitleaksignore  ARCHITECTURE.md  BehaveCredentialTests-MartyGateway.json  CHANGELOG.md  CONFIGURATION.md  Cargo.toml  DEPLOYMENT_CHECKLIST.md  Dockerfile.integration-tests  IMPLEMENTATION_SUMMARY.md  INTEGRATION_TESTS_MOVED.md  LICENSE-APACHE  LICENSE-MIT  Makefile  OPTIONS_2-4_COMPLETE.md  PRODUCTION_READY.md  QUICK_REFERENCE.md  README.md  create_application_tables.sql  deny.toml  dependency-health.yml  docker-compose.canvas-migration-contract.yml  docker-compose.integration.yml  pyproject.toml  setup_tables.sql  test_quick.py  verify_implementation.py
.github/: dependabot.yml
.github/workflows/: auto-update-deps.yml  ci.yml  cleanup-artifacts.yml  license-compliance.yml  open-source-policy.yml  organization-quality.yml  publish-pypi.yml  release-beta.yml  release-images.yml  release-rc.yml  release-stable.yml  release.yml
python/marty_credentials/: __init__.py  config.py
python/marty_credentials/adapters/: __init__.py
python/marty_credentials/adapters/adapters/: __init__.py
python/marty_credentials/adapters/multipaz/: __init__.py  adapter.py
python/marty_credentials/adapters/persistence/: __init__.py  adapter.py  models.py
python/marty_credentials/adapters/rust/: __init__.py  adapter.py  mdoc.py
python/marty_credentials/adapters/services/: __init__.py  issuance_service.py  verification_service.py
python/marty_credentials/adapters/spruceid/: __init__.py  adapter.py
python/marty_credentials/examples/: production_usage.py
python/marty_credentials/infrastructure/adapters/: zk_verification_adapter.py
python/marty_credentials/infrastructure/auth/: __init__.py  token_validator.py
python/marty_credentials/infrastructure/events/: __init__.py  publisher.py
python/marty_credentials/infrastructure/observability/: __init__.py  metrics.py  rate_limiter.py
python/marty_credentials/ports/: __init__.py  credential_ports.py  issuer.py  key_manager.py  types.py  verifier.py  wallet.py
python/status_list/: __init__.py
python/status_list/application/: __init__.py
python/status_list/application/ports/: __init__.py  inbound.py  outbound.py
python/status_list/domain/: __init__.py  entities.py  events.py  value_objects.py
python/status_list/infrastructure/: __init__.py
python/status_list/plugin/: __init__.py  config.py  service_definition.py
python/status_list/tests/: __init__.py  conftest.py  test_entities.py  test_repository.py  test_services.py  test_value_objects.py
release/: dependencies.json
rust/marty-rs/: CHANGELOG.md  Cargo.toml
rust/marty-rs/src/: bbs.rs  error.rs  lib.rs  oid4vci.rs  sd_jwt.rs  status_list.rs  wasm.rs
rust/marty-rs/src/emrtd/: bindings.rs  builder.rs  issuance.rs  mod.rs  types.rs
rust/marty-rs/src/mdoc/: bindings.rs  builder.rs  document.rs  helpers.rs  mod.rs  types.rs  verification.rs
rust/marty-rs/src/mdoc-backup-marty/: issuance.rs  mod.rs  presentation.rs  types.rs
rust/marty-rs/tests/: sd_jwt_conformance.rs
scripts/: release_contract.py
services/: Dockerfile
services/issuance/: MIGRATION_SUMMARY.md  TEST_RESULTS.md  __init__.py  canvas_worker.py  main.py  manage_migrations.py
services/issuance/application/: __init__.py  application_approval.py  canvas_evidence_revisions.py  canvas_feature_flags.py  canvas_identity.py  canvas_issuance_guard.py  canvas_lti_services.py  canvas_oauth.py  canvas_oauth_persistence.py  canvas_readiness.py  canvas_runtime.py  canvas_sync_jobs.py  canvas_sync_service.py  evidence_policy.py  evidence_reconciliation.py  evidence_transition.py  external_evidence_api.py  mip_integration_primitives.py  rust_integration.py
services/issuance/domain/: __init__.py  entities.py  ports.py
services/issuance/infrastructure/: __init__.py  models.py
services/verification/: Dockerfile  __init__.py  main.py
services/verification/application/: did_resolver.py  rust_verifier.py  service.py
services/verification/domain/: entities.py  ports.py
tests/: __init__.py  conftest.py  test_internal_application_router.py  test_issuance_changes.py  test_phase4_did_resolution.py  test_ports.py
tests/canvas-migration-contract/: Dockerfile  requirements.txt  run_contract.py
tests/features/: digital_identity.feature  environment.py  open_badges_conformance.feature  pact_interactions.py  sd_jwt_conformance.feature  w3c_vc_conformance.feature  zk_proof.feature
tests/features/steps/: credential_steps.py  open_badges_conformance_steps.py  sd_jwt_conformance_steps.py  w3c_vc_conformance_steps.py  zk_steps.py
tests/integration/gateway/: test_verification_flow.py  test_wallet_verification_flow.py
tests/unit/: _helpers.py  conftest.py  test_application_management_tenant_scope.py  test_application_template_lifecycle.py  test_canonical_application_template_migration.py  test_canvas_application_approval_route.py  test_canvas_authoritative_sync.py  test_canvas_candidate_materialization.py  test_canvas_claim_reservation.py  test_canvas_configuration_routes.py  test_canvas_credential_template_context.py  test_canvas_credentials_adapter.py  test_canvas_evidence_atomicity.py  test_canvas_evidence_fact_response.py  test_canvas_feature_flags.py  test_canvas_issuance_guard.py  test_canvas_lti_routes.py  test_canvas_lti_services.py  test_canvas_migration_compose_contract.py  test_canvas_oauth.py  test_canvas_operations_routes.py  test_canvas_production_persistence.py  test_canvas_readiness.py  test_canvas_rollout_enforcement.py  test_canvas_runtime_identity.py  test_canvas_sync_readiness_state.py  test_canvas_sync_service.py  test_canvas_sync_target_postgres_upsert.py  test_canvas_worker.py  test_cbor_edge_cases.py  test_credential_status_contract.py  test_evidence_reconciliation.py  test_external_evidence_api.py  test_issuer_auth_cbor.py  test_manage_migrations.py  test_mdoc_format_detection.py  test_oid4vci_claim_atomicity.py  test_oid4vci_request_format_inference.py  test_personalization_bureau.py  test_physical_document_contract.py  (+8 more)
(+77 files in other folders)
