[workspace]
resolver = "2"
members = ["rust/marty-rs"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.75"
repository = "https://github.com/adamburdett/marty-credentials"

[workspace.dependencies]
# Core crates from marty-core
marty-crypto = { git = "https://github.com/ElevenID/marty-core.git", branch = "main", features = ["sod-builder"] }
marty-verification = { git = "https://github.com/ElevenID/marty-core.git", branch = "main" }

# PEM encoding
pem-rfc7468 = { version = "0.7", features = ["alloc"] }
marty-secure-storage = { git = "https://github.com/ElevenID/marty-core.git", branch = "main" }
marty-oid4vci = { git = "https://github.com/ElevenID/marty-core.git", branch = "main" }

# PyO3 for Python bindings
pyo3 = { version = "0.22.6", features = ["extension-module", "abi3-py311"] }

# SSI ecosystem
ssi = { version = "0.12.0", default-features = false, features = ["secp256k1", "ed25519", "secp256r1", "secp384r1", "rsa"] }
ssi-status = { version = "0.5", default-features = false }
isomdl = { version = "0.2" }
coset = { version = "0.3" }
time = { version = "0.3", features = ["formatting", "parsing"] }

# SD-JWT
sd-jwt-rs = { version = "0.7" }

# JWT
jsonwebtoken = { version = "9.3" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
ciborium = { version = "0.2" }

# Crypto
bs58 = { version = "0.5" }
base64 = { version = "0.22" }
rsa = { version = "0.9" }
rand = { version = "0.8" }

# Async
tokio = { version = "1.42", features = ["rt", "rt-multi-thread", "sync", "macros"] }

# Utilities
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = { version = "2.0" }
flate2 = { version = "1.0" }

# Logging
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-error = { version = "0.2" }

[profile.release]
lto = true
codegen-units = 1
strip = true
