[workspace]
resolver = "2"
members = ["rust/marty-rs"]

[workspace.package]
version = "0.1.13"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.87"
repository = "https://github.com/ElevenID/marty-credentials"

[workspace.dependencies]
# Core crates from marty-core
marty-crypto = { git = "https://github.com/ElevenID/marty-core", rev = "ca05bb1d5ab9eff0f8f98a3d776b6c2375b50221", features = ["sod-builder"] }
marty-verification = { git = "https://github.com/ElevenID/marty-core", rev = "ca05bb1d5ab9eff0f8f98a3d776b6c2375b50221", default-features = false }

# PEM encoding
pem-rfc7468 = { version = "1.0", features = ["alloc"] }
marty-oid4vci = { git = "https://github.com/ElevenID/marty-core", rev = "ca05bb1d5ab9eff0f8f98a3d776b6c2375b50221" }

# PyO3 for Python bindings
pyo3 = { version = "0.29.0", features = ["extension-module", "abi3-py311"] }

# SSI ecosystem
ssi-crypto = { version = "0.2.1", default-features = false, features = ["secp256k1", "ed25519", "secp256r1", "secp384r1"] }
ssi-jwk = { version = "0.4.0", default-features = false, features = ["secp256k1", "ed25519", "secp256r1", "secp384r1"] }
ssi-status = { version = "0.8.1", default-features = false }
isomdl = { version = "0.2" }
coset = { version = "0.4" }
time = { version = "0.3", features = ["formatting", "parsing"] }

# SD-JWT
sd-jwt-rs = { git = "https://github.com/ElevenID/sd-jwt-rust", rev = "9244ec551ac56bb4fa7d3a87e50f59b2f36d1925" }

# JWT
jsonwebtoken = { version = "10.3", features = ["rust_crypto"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
ciborium = { version = "0.2" }

# Crypto
bs58 = { version = "0.5" }
base64 = { version = "0.22" }
rsa = { version = "0.9" }
rand = { version = "0.10" }

# Async
tokio = { version = "1.42", features = ["rt", "rt-multi-thread", "sync", "macros"] }

# Utilities
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = { version = "2.0" }
flate2 = { version = "1.0" }

# Logging
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-error = { version = "0.2" }

[profile.release]
lto = true
codegen-units = 1
strip = true

[patch.crates-io]
# Temporary security fork pending https://github.com/spruceid/ssi/pull/706.
ssi-jwt = { git = "https://github.com/ElevenID/ssi-jwt-elevenid", rev = "957c8b0fbf3e4b967fe73c858a22b38e907b3023" }
# Temporary security fork pending https://github.com/spruceid/isomdl/pull/134.
isomdl = { git = "https://github.com/ElevenID/isomdl-elevenid", rev = "069576a64580fc9923b65dcbdad0c2253c44296d" }
