[build-system]
requires = ["hatchling", "hatch-vcs", "maturin>=1.0,<2.0"]
build-backend = "hatchling.build"

[project]
name = "marty-credentials"
dynamic = ["version"]
description = "Credential domain logic and adapters for the Marty ecosystem"
readme = "README.md"
license = "MIT OR Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "Adam Burdett" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
keywords = ["credentials", "verifiable-credentials", "mdl", "identity", "cryptography"]

dependencies = [
    "pydantic>=2.0",
    "sqlalchemy>=2.0",
    "asyncpg>=0.29.0",
    "cryptography>=44.0.0",
    "fastapi>=0.104.0",
    "prometheus-client>=0.19.0",
    "python-json-logger>=2.0",
    "redis>=5.0",
    "cbor2>=5.6.0",
    "marty-msf>=1.0.0",
    "grpcio>=1.60.0",
    "protobuf>=4.25.0",
]

[project.optional-dependencies]
ffi = [
    "marty-rs",  # Rust FFI bindings
]
spruceid = [
    "didkit>=0.3",
]
multipaz = [
    # multipaz dependencies
]
all = [
    "marty-credentials[ffi,spruceid,multipaz]",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "mypy>=1.8",
    "ruff>=0.2",
    "behave>=1.2.6",
    "pact-python>=2.0",
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://github.com/adamburdett/marty-credentials"
Documentation = "https://github.com/adamburdett/marty-credentials#readme"
Repository = "https://github.com/adamburdett/marty-credentials.git"
Issues = "https://github.com/adamburdett/marty-credentials/issues"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["python/marty_credentials", "python/status_list"]

[tool.hatch.build.targets.sdist]
include = [
    "/python",
    "/rust",
    "/README.md",
    "/LICENSE-MIT",
    "/LICENSE-APACHE",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
