[package]
name = "marty-rs"
version.workspace = true
edition.workspace = true
description = "Python and WASM bindings for Marty digital identity verification"
license.workspace = true
rust-version.workspace = true

[lib]
name = "_marty_rs"
# cdylib for both PyO3 and wasm-bindgen
crate-type = ["cdylib", "rlib"]

[features]
default = ["python"]
python = [
    "pyo3",
    "dep:marty-verification",
    "tokio",
    "isomdl",
    "coset",
    "time",
    "ssi-status",
    "flate2",
    "tracing",
    "tracing-subscriber",
    "tracing-error",
    "ciborium",
    "sd-jwt-rs",
    "jsonwebtoken",
    "p256",
    "ed25519-dalek",
    "sha2",
    "serde_cbor"
]
wasm = [
    "dep:marty-verification",
    "wasm-bindgen",
    "wasm-bindgen-futures",
    "js-sys",
    "web-sys",
    "console_error_panic_hook",
    "getrandom/js"
]

[dependencies]
# Python bindings (optional)
pyo3 = { workspace = true, optional = true }

# WASM bindings (optional)
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", optional = true, features = ["console"] }
console_error_panic_hook = { version = "0.1", optional = true }
getrandom = { version = "0.2", optional = true }

# From workspace - shared dependencies
ssi = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
bs58 = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }
rsa = { workspace = true }
rand = { workspace = true }

# Python-only dependencies (not WASM compatible)
tokio = { workspace = true, optional = true }
isomdl = { workspace = true, optional = true }
coset = { workspace = true, optional = true }
time = { workspace = true, optional = true }
ssi-status = { workspace = true, optional = true }
flate2 = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }
tracing-error = { workspace = true, optional = true }
ciborium = { workspace = true, optional = true }

# SD-JWT support
sd-jwt-rs = { workspace = true, optional = true }
jsonwebtoken = { workspace = true, optional = true }

# Crypto for signatures
p256 = { version = "0.13", features = ["ecdsa", "pkcs8"], optional = true }
ed25519-dalek = { version = "2.1", features = ["rand_core"], optional = true }
sha2 = { version = "0.10", optional = true }
serde_cbor = { version = "0.11", optional = true }

# From marty-core (only for python feature - heavy verification not needed for WASM)
marty-verification = { workspace = true, optional = true }
